<resources>
    <string name="app_name" translatable="false">FPShare</string>
    <string name="app_logo">App Logo</string>
    <string name="btn_guardar">Save</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="hint_textHere">Text here…</string>
    <string name="txt_threadTitle">Thread Title</string>
    <string name="btn_send">Button to send the message to the thread</string>
    <string name="email_login" translatable="false">Email</string>
    <string name="password_login">Password</string>
    <string name="sign_in_login">sign in</string>
    <string name="register_login">register</string>
    <string name="forgot_your_password_login">Forgot your password?</string>
    <string name="sing_in_login">Sign in</string>
    <string name="title_activity_recovery_password">recoveryPassword</string>
    <string name="email_recoverypassword" translatable="false">Email</string>
    <string name="recovery_password">recovery password</string>
    <string name="name_profile">Name</string>
    <string name="last_names_profile">Last names</string>
    <string name="email_profile" translatable="false">Email</string>
    <string name="telephone_number_profile">Telephone Number</string>
    <string name="institute_profile">Institute</string>
    <string name="save_changes_profile">save changes</string>
    <string name="users_admin_menu">users</string>
    <string name="posts_admin_menu">posts</string>
    <string name="tags_admin_menu">tags</string>
    <string name="title_new_post">New Post</string>
    <string name="description_new_post">Description</string>
    <string name="link_new_post">Link</string>
    <string name="tags_new_post">Tags</string>
    <string name="dam_new_post" translatable="false">DAM</string>
    <string name="daw_new_post" translatable="false">DAW</string>
    <string name="asix_new_post">ASIX</string>
    <string name="smix__new_post">SMIX</string>
    <string name="publish_new_post">Publish</string>
    <string name="content_description_spinner_modules_new_post">List of modules of the selected cycle</string>
    <string name="content_description_spinner_ufs_new_post">List of the ufs of the selected module</string>
    <string name="content_description_foto_de_perfil_de_usuario_profile">User profile picture</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="emailHint">Your email address</string>
    <string name="txtMail" translatable="false">E-Mail</string>
    <string name="txtPass">Password</string>
    <string name="txtName">Username</string>
    <string name="txtLogin">Login</string>
    <string name="txtSign">Sign in</string>
    <string name="textBtnSave">Save Changes</string>
    <string name="titleEditarPublic">Edit Post</string>
    <string name="logo_de_la_app_image_login">app logo</string>
    <string name="strUF" translatable="false">UF</string>
    <string name="strModule">Module</string>
    <string name="strCicle">Cicle</string>
    <string name="strLink">Link</string>
    <string name="strTitle">Title</string>
    <string name="strPubli">Post</string>
    <string name="strDesc">Description</string>
    <string name="txtEdit">Edit Post</string>
    <string name="txtPublicationTitle">Publication Title</string>
    <string name="txtPublicationDescription">Publication Description</string>
    <string name="txtLink">Link</string>
    <string name="txtSave">Save Changes</string>
    <string name="txtRegister">Register</string>
    <string name="txtAsk">Already have an account?</string>
    <string name="txt_new_name">New name</string>
    <string name="txt_rename_user">Rename User</string>
    <string name="txt_change">Change</string>
    <string name="logo_de_la_app_recoovery_password">App logo</string>
    <string name="threadTitle">Thread title</string>
    <string name="enter_cicle">Enter to Cicle</string>
    <string name="logoDescription" translatable="false">Logo FPshare</string>
    <string name="HintName">Your Username..</string>
    <string name="hintLoginPassword">Your password..</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="new_tag">New Tag</string>
    <string name="administration">Administration</string>
    <string name="rename_user">Rename user</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="add_tag">Add Tag</string>
    <string name="name">Name…</string>
    <string name="tag_name">Tag Name</string>
    <string name="id_of_tag">ID of tag…</string>
    <string name="create_new_tag">Create New Tag</string>
    <string name="delete_uf">Delete UF</string>
    <string name="add_uf">Add UF</string>
    <string name="delete_module">Delete Module</string>
    <string name="add_module">Add Module</string>
    <string name="delete_cicle">Delete Cicle</string>
    <string name="add_cicle">Add Cicle</string>
    <string name="input_id_cicle">Enter the ID of the cicle</string>
    <string name="name_of_cicle">Name of Cicle</string>
    <string name="enter_id_uf">Enter the ID of the UF</string>
    <string name="name_of_uf">Name of UF</string>
    <string name="back">Back</string>
    <string name="name_module">Name of the module</string>
    <string name="enter_id_module">Enter the ID of the module</string>
    <string name="cicles_menu_admin">cicles</string>
    <string name="select_a_cicle">Select a Cicle</string>
    <string name="id_of_cicle">ID of Cicle</string>
    <string name="cicle">Cicle</string>
    <string name="module">Module</string>
    <string name="uf" translatable="false">UF</string>
    <string name="comentarios">Comments:</string>
    <string name="cicles_admin">Cicles Administration</string>
    <string name="new_forum">New Forum</string>
    <string name="new_cicle">New Cicle</string>
    <string name="new_module">New Module</string>
    <string name="new_uf">New UF</string>
    <string name="posts">Posts</string>
    <string name="modules">Modules</string>
    <string name="ufs" translatable="false">UFs</string>
    <string name="post_admin">Posts Administration</string>
    <string name="user_admin">Users Administration</string>
    <string name="admin">Administration</string>
    <string name="thread">Threads</string>
    <string name="cicles">Cicles</string>
    <string name="new_post">New Post</string>
    <string name="forums">Forum</string>
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="administrator_info_usuario">Administrator</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_uf">Edit UF</string>
    <string name="edit_module">Edit Module</string>
    <string name="edit_cicle">Edit Cicle</string>
    <string name="see_modules">See Modules</string>
    <string name="see_ufs">See UFs</string>
    <string name="see_posts">See Posts</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_publi">Delete Post</string>
    <string name="pdf">Save as PDF</string>
    <string name="a_adir_foro">Add forum</string>
    <string name="menu_recordatorio">Reminder</string>
    <string name="borrar_foro_fp_hilo">Delete Forum</string>
    <string name="titulo_alerta_borrar_foro">DELETE THIS FORUM?</string>
    <string name="contenido_alert_borrar_foro">Are you sure you want to delete this forum?</string>
    <string name="boton_positivo_alerta_borrar_forro">Accept</string>
    <string name="boton_negativo_alerta_borrar_foro">Cancel</string>
    <string name="info_no_especificada_mostrar_info_usuario">(Not specified)</string>
    <string name="txtUserEdit">User</string>
    <string name="title">Title</string>
    <string name="cancelar">Cancel</string>
    <string name="myPosts">My Posts</string>
    <string name="respuestas">Answers</string>
    <string name="your_forums">Your Forums</string>
    <string name="nuevo_titulo_foro">Type the new title</string>
    <string name="nueva_descripcion">Type the new description</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nombre_usuario">Nombre email</string>
    <string name="correo_usuario">User email</string>
    <string name="menu_perfil">Profile</string>
    <string name="menu_publicaciones">Posts</string>
    <string name="menu_ajustes">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="bottom_home">home</string>
    <string name="bottom_search">search</string>
    <string name="bottom_forum">forum</string>
    <string name="bottom_new_post">new post</string>
    <string name="buscar">Search</string>
    <string name="errorUFNoEspecificada">You have not selected any cycle, module or uf</string>
    <string name="invalidURL">Invalid URL</string>
    <string name="errorCamposVacios">You have to fill in all the fields</string>
    <string name="errorTituloLargo">The title is too long</string>
    <string name="errorDescripcionLarga">The description is too long</string>
    <string name="telefonoInvalido">Invalid Phone number</string>
    <string name="nombreInvalido">The name is too long</string>
    <string name="errorUserEquivocado">Wrong user or password</string>
    <string name="errorEmail">Not valid email</string>
    <string name="errorContraseña">The password can\'t be less than 6 characters</string>
    <string name="errorNombreEmailVacio">The name and the email can\'t be empty</string>
    <string name="emailEnviadoRecu">Email sent correctly</string>
    <string name="cicloAñadidoCorrecto">Cycle added correctly</string>
    <string name="cicloAñadidoError">Error adding cycle</string>
    <string name="moduloExiste">The module already exists</string>
    <string name="cicloExiste">The cycle already exists</string>
    <string name="moduloAñadirError">Error adding module</string>
    <string name="moduloAñadirCorrecto">Module added correctly</string>
    <string name="ufAñadirError">Error adding UF</string>
    <string name="ufExists">The UF already exists</string>
    <string name="ufAñadirCorrecto">UF added correctly</string>
    <string name="cicloBorradoCorrecto">Cycle deleted correctly</string>
    <string name="cicloBorrarError">Error deleting the cycle</string>
    <string name="ufBorradoCorrecto">UF deleted correctly</string>
    <string name="ufBorradoError">Error deleting the UF</string>
    <string name="moduloBorradoCorrecto">Module deleted correctly</string>
    <string name="moduloBorradoError">Error deleting the module</string>
    <string name="imageLoadError">Image load has failed</string>
    <string name="perfilUpdateCorrecto">Profile update made successfully</string>
    <string name="uploadResult">Image uploaded successfully.</string>
    <string name="reminder">Reminder</string>
    <string name="decripcion_alerta_no_permisos">This option creates a reminder with which a notification will be sent to you. To use it, activate the \'Notifications\' option of the application in your device\'s settings.</string>
    <string name="aceptat">Accept</string>
    <string name="activar_recordatorio">Do you want to activate a reminder that will send you a notification in 5 minutes?</string>
    <string name="desactivar_recordatorio">There is already an activated reminder do you want to deactivate it?</string>
    <string name="forum_thread_title">forum thread title</string>
    <string name="delete_forum">delete forum</string>
    <string name="edit_title">edit title</string>
    <string name="edit_description">edit description</string>
    <string name="enter_the_title_of_the_new_forum">enter the title of the new forum</string>
    <string name="campos_vacios">Empty fields</string>
    <string name="aviso_campos_vacios">Some of the fields required to create a forum (title, description) are empty. Fill them in to create the forum</string>
    <string name="valorar_app">Rate the app</string>
</resources>