<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_perfil"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/menuAdministracion"
            android:icon="@drawable/ic_menu_admin"
            android:title="@string/administration"/>
        <item
            android:id="@+id/fp_ajustes"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_ajustes" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>