<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista_previa_publicacion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtDescview"
            style="@style/Widget.FpShare.TextView.TextoNegro"
            android:layout_width="@dimen/size_300"
            android:layout_height="@dimen/size_159"
            android:layout_marginStart="@dimen/size_60"
            android:layout_marginTop="@dimen/size_30"
            android:text="@string/strDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleview" />

        <TextView
            android:id="@+id/titlePublicacion"
            style="@style/Widget.FpShare.TextViewTitle"
            android:layout_marginStart="@dimen/size_60"
            android:layout_marginTop="@dimen/size_60"
            android:text="@string/strPubli"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_60"
            android:src="@drawable/perfil"
            app:layout_constraintStart_toStartOf="@+id/titlePublicacion"
            app:layout_constraintTop_toBottomOf="@+id/titlePublicacion" />

        <TextView
            android:id="@+id/txtProfile"
            style="@style/Widget.FpShare.TextView.TextoNegro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_50"
            android:layout_marginTop="@dimen/size_70"
            android:text="@string/strProfile"
            app:layout_constraintStart_toEndOf="@+id/imgProfile"
            app:layout_constraintTop_toBottomOf="@+id/titlePublicacion"
            />

        <TextView
            android:id="@+id/txtTitleview"
            style="@style/Widget.FpShare.TextView.TextoNegro"
            android:layout_width="@dimen/size_300"
            android:layout_height="@dimen/size_70"
            android:layout_marginStart="@dimen/size_60"
            android:layout_marginTop="@dimen/size_60"
            android:text="@string/strTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProfile"
            />

        <TextView
            android:id="@+id/txtLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:text="@string/strLink"
            app:layout_constraintStart_toStartOf="@+id/txtDescview"
            app:layout_constraintTop_toBottomOf="@+id/txtDescview"
            />

        <TextView
            android:id="@+id/txtCicleview"
            style="@style/Widget.FpShare.TextView.TextoNegro"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_32"
            android:text="@string/strCicle"
            app:layout_constraintStart_toStartOf="@+id/txtLink"
            app:layout_constraintTop_toBottomOf="@+id/txtLink"
            />

        <TextView
            android:id="@+id/textModuleview"
            style="@style/Widget.FpShare.TextView.TextoNegro"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_85"
            android:text="@string/strModule"
            app:layout_constraintStart_toEndOf="@+id/txtCicleview"
            app:layout_constraintTop_toBottomOf="@+id/txtDescview"
            />

        <TextView
            android:id="@+id/txtUFview"
            style="@style/Widget.FpShare.TextView.TextoNegro"
            android:layout_width="@dimen/size_100"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_85"
            android:text="@string/strUF"
            app:layout_constraintStart_toEndOf="@+id/textModuleview"
            app:layout_constraintTop_toBottomOf="@+id/txtDescview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>