<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaPublicacion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NuevaPublicacion">

        <TextView
            android:id="@+id/textView_title_new_post"
            style="@style/Widget.FpShare.TextViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_textview_new_post"
            android:layout_marginTop="@dimen/margin_top_textview_title_new_post"
            android:text="@string/title_new_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_title_new_post"
            style="@style/Widget.FpShare.TextInputLayout"
            android:layout_marginTop="@dimen/margin_top_textimput_new_post"
            android:hint="@string/title_new_post"
            app:layout_constraintStart_toStartOf="@+id/textView_title_new_post"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_new_post">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_text_imput_edittext"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_description_new_post"
            style="@style/Widget.FpShare.TextViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_textview_new_post"
            android:text="@string/description_new_post"
            app:layout_constraintStart_toStartOf="@+id/input_title_new_post"
            app:layout_constraintTop_toBottomOf="@+id/input_title_new_post" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/imput_description_new_post"
            style="@style/Widget.FpShare.TextInputLayout"
            android:layout_marginTop="@dimen/margin_top_textimput_new_post"
            android:hint="@string/description_new_post"
            app:layout_constraintStart_toStartOf="@+id/textView_description_new_post"
            app:layout_constraintTop_toBottomOf="@+id/textView_description_new_post">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_text_imput_edittext"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_link_new_post"
            style="@style/Widget.FpShare.TextViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_textview_new_post"
            android:text="@string/link_new_post"
            app:layout_constraintStart_toStartOf="@+id/imput_description_new_post"
            app:layout_constraintTop_toBottomOf="@+id/imput_description_new_post" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_link_new_post"
            style="@style/Widget.FpShare.TextInputLayout"
            android:layout_marginTop="@dimen/margin_top_textimput_new_post"
            android:hint="@string/link_new_post"
            app:layout_constraintStart_toStartOf="@+id/textView_link_new_post"
            app:layout_constraintTop_toBottomOf="@+id/textView_link_new_post">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_text_imput_edittext"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView_tags_new_post"
            style="@style/Widget.FpShare.TextViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_textview_new_post"
            android:text="@string/tags_new_post"
            app:layout_constraintStart_toStartOf="@+id/input_link_new_post"
            app:layout_constraintTop_toBottomOf="@+id/input_link_new_post" />

        <RadioGroup
            android:id="@+id/tags_cicles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_tags_cicles"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView_tags_new_post"
            app:layout_constraintTop_toBottomOf="@+id/textView_tags_new_post">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_radiobutton_new_post"
                android:text="@string/dam_new_post" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_radiobutton_new_post"
                android:text="@string/daw_new_post" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end_radiobutton_new_post"
                android:text="@string/asix_new_post" />

            <RadioButton
                android:id="@+id/option_fifteen_percent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smix__new_post" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinner_modules_new_post"
            android:layout_width="@dimen/width_spinner_new_post"
            android:layout_height="@dimen/height_spinner_new_post"
            android:layout_marginTop="@dimen/margin_top_spinner_modules_new_post"
            android:contentDescription="@string/content_description_spinner_modules_new_post"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tags_cicles"
            tools:ignore="RedundantDescriptionCheck" />

        <Spinner
            android:id="@+id/spinner_ufs_new_post"
            android:layout_width="@dimen/width_spinner_new_post"
            android:layout_height="@dimen/height_spinner_new_post"
            android:layout_marginTop="@dimen/margin_top_spinner_ufs_new_post"
            android:contentDescription="@string/content_description_spinner_ufs_new_post"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_modules_new_post"
            tools:ignore="RedundantDescriptionCheck" />

        <Button
            android:id="@+id/button_publish_new_post"
            style="@style/Widget.FpShare.Button"
            android:layout_marginTop="@dimen/margin_top_button_publish_new_post"
            android:text="@string/publish_new_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_ufs_new_post" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>