<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAdministracion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuAdministracion">

        <Button
            android:id="@+id/button_users_admin_menu"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_top_button_users_admin_menu"
            android:text="@string/users_admin_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_posts_admin_menu"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_top_button_posts_admin_menu"
            android:text="@string/posts_admin_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_users_admin_menu" />

        <Button
            android:id="@+id/button_tags_admin_menu"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_top_button_tag_admin_menu"
            android:text="@string/tags_admin_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_posts_admin_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>